--- a/style-my-version.css
+++ b/style-my-version.css
@@ -1,3 +1,9 @@
+body::before {
+  display: block;
+  content: '';
+  height: 60px;
+}
+
 /* Custom media query for the newsletter input group */
 @media only screen and (min-width: 768px) {
     .news-input {
